--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Dylan Spencer</title>
+    <style>
+      * {
+        margin: 0;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
