--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
-
+    <link rel="icon" href="/my-site/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      href="/my-site/assets/dyl_logo_1-C5JOw9Ob.png"
+      sizes="180x180"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dylan Spencer</title>
     <style>
