--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="/my-site/favicon.ico" />
     <link
       rel="apple-touch-icon"
-      href="/my-site/assets/dyl_logo_1-C5JOw9Ob.png"
+      href="/my-site/assets/dyl_logo_blue_background-CubzxicS.jpg"
       sizes="180x180"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
